@startuml

skinparam classAttributeIconSize 0

interface IGameState {
  +Enter(): void
  +Update(): void
}

class Game {
  +State: IGameState
}

class GameStartingState
class GamePlayingState
class GameFinishedState

IGameState <|.. GameStartingState
IGameState <|.. GamePlayingState
IGameState <|.. GameFinishedState

Game --> IGameState

interface IRoundState {
  +Enter(): void
  +Update(): void
}

class Round {
  +State: IRoundState
}

class RoundSetupState
class RoundPlayingState
class RoundFinishedState

IRoundState <|.. RoundSetupState
IRoundState <|.. RoundPlayingState
IRoundState <|.. RoundFinishedState

Round --> IRoundState


@enduml
